[BACKEND] getTeamsByUserId correct route + swagger + add unit test
