# server/config/routes/privateRoutes.js
@@ -4,7 +4,7 @@ const privateRoutes = {
 
     //Team
     'POST /team/create': 'TeamController.createTeam',
-    'GET /user/:userId/teams': 'TeamController.getTeams',
+    'GET /user/:userId/teams': 'TeamController.getTeamsByUserId',
     
     //Board
     'POST /board/create': 'BoardController.createBoard',
