# server/swagger/swagger.yaml
@@ -233,6 +233,40 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
+  /api/private/user/{userId}/teams :
+    get:
+      summary: Get all the teams for a user
+      security:
+        - token: []
+      tags:
+        - teams
+      parameters:
+        - name: userId
+          in: path
+          description: User ID
+          required: true
+          schema:
+            type: string
+      responses:
+        '201':
+          description: Teams sucessfully fetched
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Teams"
+        '404':
+          description: Team not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        '422':
+          description: Invalid input
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
   /api/private/team/admin/{teamId}/add/user/{userId} :
     post:
       summary: Add a member to a team
@@ -788,6 +822,11 @@ components:
         members:
           $ref: "#/components/schemas/TeamMembers"
           default: []
+
+    Teams:
+      type: array
+        items:
+          $ref: "#/components/schemas/Team"
 
     Boards:
       type: array
